[package]
name = "cuboid"
version = "0.1.0"
authors = ["Alexander Korzun <sahhash33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"


[dependencies.sdl2]
version = "0.34"
features = ["ttf", "gfx", "image", "mixer"]
